Updating READMEs and bumping to 1.2.0.